// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`generate (comment markers) README missing rule list markers and no rules section throws an error 1`] = `"README.md is missing rules list markers: <!-- begin auto-generated rules list --><!-- end auto-generated rules list -->"`;

exports[`generate (comment markers) README missing rule list markers but with rules section adds rule list markers to rule section 1`] = `
"# eslint-plugin-test

Foo.

## Rules
<!-- begin auto-generated rules list -->

| Name                           | Description            |
| :----------------------------- | :--------------------- |
| [no-foo](docs/rules/no-foo.md) | Description of no-foo. |

<!-- end auto-generated rules list -->

Old rules list.

## Other

Bar.
"
`;

exports[`generate (comment markers) generates the documentation with one blank line around comment markers 1`] = `
"# eslint-plugin-test
Description.
## Rules
<!-- begin auto-generated rules list -->

💼 Configurations enabled in.\\
🌐 Set in the \`all\` configuration.\\
✅ Set in the \`recommended\` configuration.\\
🎨 Set in the \`style\` configuration.\\
🔧 Automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/user-guide/command-line-interface#--fix).\\
💡 Manually fixable by [editor suggestions](https://eslint.org/docs/latest/use/core-concepts#rule-suggestions).\\
💭 Requires [type information](https://typescript-eslint.io/linting/typed-linting).

| Name                           | Description            | 💼    | 🔧 | 💡 | 💭 |
| :----------------------------- | :--------------------- | :---- | :- | :- | :- |
| [no-bar](docs/rules/no-bar.md) | Description of no-bar. | 🌐 🎨 | 🔧 |    | 💭 |
| [no-baz](docs/rules/no-baz.md) | Description of no-baz. |       |    |    |    |
| [no-foo](docs/rules/no-foo.md) | Description of no-foo. | 🌐 ✅  | 🔧 | 💡 |    |

<!-- end auto-generated rules list -->
more content.

"
`;

exports[`generate (comment markers) generates the documentation with one blank line around comment markers 2`] = `
"# test/no-foo

💼 This rule is enabled in the following configs: 🌐 \`all\`, ✅ \`recommended\`.

🔧💡 This rule is automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/latest/user-guide/command-line-interface#--fix) and manually fixable by [editor suggestions](https://eslint.org/docs/latest/use/core-concepts#rule-suggestions).

📝 Description of no-foo.

<!-- end auto-generated rule header -->
## Rule details
details
## Options
optionToDoSomething1 - explanation
optionToDoSomething2 - explanation
"
`;

exports[`generate (comment markers) no existing comment markers - minimal doc content generates the documentation 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

🔧 Automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/user-guide/command-line-interface#--fix).

| Name                           | Description            | 🔧 |
| :----------------------------- | :--------------------- | :- |
| [no-foo](docs/rules/no-foo.md) | Description of no-foo. | 🔧 |

<!-- end auto-generated rules list -->
"
`;

exports[`generate (comment markers) no existing comment markers - minimal doc content generates the documentation 2`] = `
"# test/no-foo

🔧 This rule is automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/latest/user-guide/command-line-interface#--fix).

📝 Description of no-foo.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (comment markers) no existing comment markers - rule doc with YAML-formatted metadata (front matter) above title updates the documentation 1`] = `
"---
pageClass: "rule-details"
sidebarDepth: 0
title: "plugin/rule-name"
description: "disallow foo"
since: "v0.12.0"
---
# test/no-foo

💼 This rule is enabled in the ✅ \`recommended\` config.

📝 Description.

<!-- end auto-generated rule header -->
Pre-existing notice about the rule being recommended.
## Rule details
Details.
"
`;

exports[`generate (comment markers) no existing comment markers - with no blank lines in existing content generates the documentation 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

🔧 Automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/user-guide/command-line-interface#--fix).

| Name                           | Description            | 🔧 |
| :----------------------------- | :--------------------- | :- |
| [no-foo](docs/rules/no-foo.md) | Description of no-foo. | 🔧 |

<!-- end auto-generated rules list -->
Existing rules section content.
"
`;

exports[`generate (comment markers) no existing comment markers - with no blank lines in existing content generates the documentation 2`] = `
"# test/no-foo

🔧 This rule is automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/latest/user-guide/command-line-interface#--fix).

📝 Description of no-foo.

<!-- end auto-generated rule header -->
Existing rule doc content.
"
`;

exports[`generate (comment markers) no existing comment markers - with one blank line around existing content generates the documentation 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

🔧 Automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/user-guide/command-line-interface#--fix).

| Name                           | Description            | 🔧 |
| :----------------------------- | :--------------------- | :- |
| [no-foo](docs/rules/no-foo.md) | Description of no-foo. | 🔧 |

<!-- end auto-generated rules list -->

Existing rules section content.
"
`;

exports[`generate (comment markers) no existing comment markers - with one blank line around existing content generates the documentation 2`] = `
"# test/no-foo

🔧 This rule is automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/latest/user-guide/command-line-interface#--fix).

📝 Description of no-foo.

<!-- end auto-generated rule header -->

Existing rule doc content.
"
`;

exports[`generate (comment markers) rule doc with YAML-formatted metadata (front matter) above title and comment marker updates the documentation 1`] = `
"---
pageClass: "rule-details"
sidebarDepth: 0
title: "plugin/rule-name"
description: "disallow foo"
since: "v0.12.0"
---
# test/no-foo

💼 This rule is enabled in the ✅ \`recommended\` config.

📝 Description.

<!-- end auto-generated rule header -->
## Rule details
Details.
"
`;

exports[`generate (comment markers) rule doc with YAML-formatted metadata (front matter) and nothing else updates the documentation 1`] = `
"---
pageClass: "rule-details"
sidebarDepth: 0
title: "plugin/rule-name"
description: "disallow foo"
since: "v0.12.0"
---
# test/no-foo

💼 This rule is enabled in the ✅ \`recommended\` config.

📝 Description.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (comment markers) rule doc without header marker but pre-existing header updates the documentation 1`] = `
"# test/no-foo

💼 This rule is enabled in the ✅ \`recommended\` config.

📝 Description.

<!-- end auto-generated rule header -->
Pre-existing notice about the rule being recommended.
## Rule details
Details.
"
`;

exports[`generate (comment markers) with no blank lines around comment markers generates the documentation 1`] = `
"# Rules

No blank line after this.
<!-- begin auto-generated rules list -->

🔧 Automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/user-guide/command-line-interface#--fix).

| Name                           | Description            | 🔧 |
| :----------------------------- | :--------------------- | :- |
| [no-foo](docs/rules/no-foo.md) | Description of no-foo. | 🔧 |

<!-- end auto-generated rules list -->
No blank line before this.
"
`;

exports[`generate (comment markers) with no blank lines around comment markers generates the documentation 2`] = `
"# test/no-foo

🔧 This rule is automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/latest/user-guide/command-line-interface#--fix).

📝 Description of no-foo.

<!-- end auto-generated rule header -->
No blank line before this.
"
`;
